# virtual_machine

./: .gitignore  CMakeLists.txt  README.md  vm.c  vm.h
docs/: main.tex  references.bib
docs/sections/: abstract.tex  conclusions.tex  implementation_notes.tex  instruction_set.tex  machines.tex  programs.tex  project_setup.tex
include/: operations.h  vm.h
include/io/: assembler.h  lexer.h
include/operations/: flow.h  logic.h  maths.h  registers.h  stack.h
src/: main.c  operations.c  vm.c
src/io/: assembler.c  lexer.c
src/operations/: flow.c  logic.c  maths.c  registers.c  stack.c
